# syslog-ng

./: .gitignore  COPYING  Makefile.am  SSB_VERSION  VERSION  autogen.sh  balabit-vs-build  configure.in
lib/tests/: Makefile.am  test_compat.c  test_host_resolve.c  test_log_message.c  test_utf8utils.c
lib/value-pairs/: Makefile.am  transforms.c  value-pairs.c  value-pairs.h
lib/value-pairs/tests/: Makefile.am  test_value_pairs.c  test_value_pairs_walk.c
modules/: Makefile.am
modules/afamqp/: afamqp.c
modules/affile/: Makefile.am  affile-grammar.ym  affile-parser.c  affile-plugin.c  affile-source.c  affile.h  affile_common.c  affile_common.h  affile_unix.c  affile_win.c  filemonitor.h  filemonitor_unix.c  filemonitor_win.c  uniq_queue.c  uniq_queue.h
modules/affile/filemonitor/: Makefile.am  filemonitor.c  filemonitor.h  filemonitor_inotify.c  filemonitor_inotify.h  filemonitor_poll.c  filemonitor_poll.h  filemonitor_unix.c  filemonitor_unix.h  filemonitor_win.c  filemonitor_win.h
modules/afmongodb/: afmongodb-grammar.ym  afmongodb-parser.c  afmongodb.c  afmongodb.h
modules/afprog/: afprog-grammar.ym  afprog-parser.c  afprog-plugin.c  afprog.c  afprog.h
modules/afsmtp/: afsmtp-grammar.ym  afsmtp-parser.c  afsmtp.c  afsmtp.h
modules/afsocket/: Makefile.am  afinet.c  afinet.h  afsocket-grammar.ym  afsocket-parser.c  afsocket-plugin.c  afsocket.c  afsocket.h  afunix.c  afunix.h  sd-daemon.c  sd-daemon.h  socket-options-inet.c  socket-options-inet.h  socket-options.c
modules/afsql/: afsql-grammar.ym  afsql-parser.c  afsql-plugin.c  afsql.c  afsql.h
modules/afstomp/: afstomp.c
modules/afstreams/: afstreams-grammar.ym  afstreams-parser.c  afstreams-plugin.c  afstreams.c  afstreams.h
modules/afuser/: afuser-grammar.ym  afuser-parser.c  afuser-plugin.c  afuser.c  afuser.h
modules/basic-proto/: basic-proto-grammar.ym  basic-proto-parser.c  basic-proto-parser.h  basic-proto-plugin.c  basic-proto.c  basic-proto.h
modules/basicfuncs/: basic-funcs.c
modules/basicfuncs/tests/: test_basicfuncs.c
modules/cef/: Makefile.am  cef-plugin.c  format-cef-extension.c  format-cef-extension.h
modules/cef/tests/: Makefile.am  test-format-cef-extension.c
modules/confgen/: confgen-plugin.c
modules/convertfuncs/: convert-funcs.c
modules/convertfuncs/tests/: Makefile.am  test_cut.c  test_format_snare.c  test_ipv4toint.c  test_lowercase.c  test_replace.c
modules/cryptofuncs/: cryptofuncs.c
modules/cryptofuncs/tests/: test_cryptofuncs.c
modules/csvparser/: csvparser-grammar.ym  csvparser-parser.c  csvparser-parser.h  csvparser-plugin.c  csvparser.c  csvparser.h
modules/csvparser/tests/: test_csvparser.c
modules/dbparser/: Makefile.am  dbparser-grammar.ym  dbparser-parser.c  dbparser-parser.h  dbparser-plugin.c  dbparser.c  dbparser.h  patterndb-int.h  patterndb.c  patterndb.h  pdbtool.c  radix.c  radix.h  timerwheel.c  timerwheel.h
modules/dbparser/pdbtool/: pdbtool.c
modules/dbparser/tests/: Makefile.am  test_patterndb.c  test_patterndb_parsers.c  test_patternize.c  test_radix.c  test_timer_wheel.c
modules/diskq/tests/: test_diskq.c  test_diskq_full.c  test_reliable_backlog.c
modules/dummy/: dummy-grammar.ym  dummy-parser.c  dummy-parser.h  dummy.c  dummy.h
modules/java/: LogDestination.java  Makefile.am
modules/java-modules/: .gitignore  Makefile.am  build.gradle  settings.gradle
modules/java-modules/common/: build.gradle
modules/java-modules/dummy/: build.gradle
modules/java-modules/elastic/: build.gradle
modules/java-modules/elastic-v2/: build.gradle
modules/java-modules/hdfs/: build.gradle
modules/java-modules/kafka/: build.gradle
modules/java/native/: java-class-loader.c  java-destination.c  java-grammar.ym  java-parser.c  java-parser.h  java-plugin.c  java_machine.c  java_machine.h
modules/java/proxies/: internal-message-sender-proxy.c  (+3 more)
modules/json/: dot-notation.c  dot-notation.h  format-json.c  format-json.h  json-parser-grammar.ym  json-parser-parser.c  json-parser-parser.h  json-parser.c  json-parser.h  json-plugin.c
modules/kvformat/: Makefile.am  format-welf.c  format-welf.h  kv-parser-parser.c  kv-parser-parser.h  kv-parser.c  kv-parser.h  kv-scanner.c  kv-scanner.h  kvformat-plugin.c  linux-audit-scanner.c
modules/linux-kmsg-format/: linux-kmsg-format-plugin.c
modules/pacctformat/: pacct-format-plugin.c  pacct-format.c
modules/python/: python-plugin.c
modules/redis/: redis.c
modules/syslogformat/: syslog-format-plugin.c  syslog-format.c  syslog-format.h
modules/system-source/: system-source.c
modules/systemd-journal/: journal-reader.c  journal-reader.h  journald-helper.c  journald-subsystem.c  journald-subsystem.h  systemd-journal-grammar.ym  systemd-journal-parser.c  systemd-journal-plugin.c  systemd-journal.c  systemd-journal.h
scl/: Makefile.am  modules.conf  scl.conf  syslog-ng.conf
scl/elasticsearch/: plugin.conf
scl/hdfs/: plugin.conf
scl/java-dests/: plugin.conf
scl/kafka/: plugin.conf
scl/pacct/: plugin.conf
scl/snmp/: plugin.conf
scl/sql/: plugin.conf
scl/system/: generate-system-source.sh  plugin.conf
syslog-ng-query/: Makefile.am  syslog-ng-query.c
tests/: Makefile.am  collect-cov.sh
tests/complex/: test_control.c
tests/copyright/: Makefile.am  check.sh  policy
tests/loggen/: loggen.c
tests/unit/: Makefile.am  test_buffered_proto_state.c  test_cache.c  test_clone_logmsg.c  test_control_cmds.c  test_control_connection.c  test_csv_parser_flags.c  test_data_to_hex.c  test_dnscache.c  test_filereader.c  test_filters.c  test_filters_in_list.c  test_findcrlf.c  test_findeom.c  test_hashtree.c  test_hds.c  test_hostid.c  test_hostname.c  test_lexer.c  test_log_message.c  test_logmsg_ack.c  test_logproto.c  test_logqueue.c  test_logwriter.c  test_mainloop.c  test_matcher.c  test_messages.c  test_msgformat_upgrade.c  test_msgparse.c  test_msgsdata.c  test_msgserialize.c  test_msgserialize_benchmark.c  test_msgserialize_tags.c  test_multiline.c  test_nvtable.c  test_persist_state.c  test_persist_state_threaded.c  test_query_cmds.c  test_rcptid.c  test_replace_string.c  (+18 more)
(+337 files in other folders)
