value_pairsincludedir			= ${pkgincludedir}/value-pairs

value_pairsinclude_HEADERS = 			\
	value-pairs/value-pairs.h		\
	value-pairs/transforms.h		\
	value-pairs/cmdline.h			\
	value-pairs/evttag.h

value_pairs_sources = 				\
	value-pairs/value-pairs.c		\
	value-pairs/transforms.c		\
	value-pairs/cmdline.c			\
	value-pairs/evttag.c

include value-pairs/tests/Makefile.am
